- REMOVED:     - All code about update and create user with roles (ToDo)
- ADDED:
    - All about Role Permissions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
+server.port=8080
+
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/jwt_security
 #spring.datasource.username=postgres
